# roaring-landmask

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  pylintrc  pyproject.toml  pytest.ini  setup.py
.github/workflows/: package.yml  python.yml  rust.yml
assets/: gshhg_mask.tbmap.xz  osm_mask.tbmap.xz
roaring_landmask/: __init__.py
src/: bloom.rs  lib.rs  mask.rs  providers.rs  shapes.rs
src/devel/: make_bitmap.rs  make_demo_plot.py  make_ocean_mask.py  make_unsure_bitmap.rs  rasterize.rs  rasterize2.rs  roaring_scripts.py
tests/: test_dateline.py  test_ext.py  test_geos_par_prepped.rs  test_old.py  test_open_wkb.py  test_roaring.py
