[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
description = "A fast and limited-memory structure with a landmask based on GSHHG for determing whether a point on Earth is on land or in the ocean"
name = "roaring-landmask"
version = "0.8.0"
edition = "2018"
license = "MIT"
homepage = "https://github.com/gauteh/roaring-landmask"
repository = "https://github.com/gauteh/roaring-landmask"
exclude = [ "gshhs/*" ]

[lib]
name = "roaring_landmask"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "make_bitmap"
path = "src/devel/make_bitmap.rs"

[dependencies]
geos = { version = "9" }
lazy_static = "1.4"
numpy = { version = "0.21" }
pyo3 = { version = "0.21" , features = [ "abi3-py39" ] }
roaring = "0.10"
rust-embed = "8"
xz2 = "0.1"
ndarray = { version = "0.15", features = [ "rayon" ] }

[dev-dependencies]
rayon = "1"

[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = [ "blocking", "rustls-tls" ] }
ring = "0.17"
path-slash = "0.2"

[features]
extension-module = ["pyo3/extension-module"]
simd = [ "roaring/simd" ]
static = [ "geos/static" ]
nightly = [ "simd" ]
default = []

[profile.release]
debug = true

